data/derived/fa15/progs/unify/prog0467.ml.out
Characters 47-60:
  else digitsOfInt n / 1;;
       ^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
